@startuml
'https://plantuml.com/sequence-diagram


class Usuario{
-nombreDelUsuario:String
-apelidoPaterno:String
-apellidoMaterno:String
-rut:String
-nombreDeUsuario:String
-contraceña:String
-tipoDeUsuario:String

+Usuario(nombreDelUsuario:String,apelidoPaterno:String,
apelidoPaterno:String,rut:String,nombreDelUsuario:Stringcontraceña:String,tipoDeUsuario:String)
+getnombreDelUsuario():String
+getapellidoMaterno():String
+getrut():String
+getnombreDeUsuario():String
+getcontraceña():String
+gettipoDeUsuario():String
+set´s():void

}

class Libros{
-idLibro:String
-tituloLibro:String
-autor:String
-genero1Libro:String
-genero2Libro:String
-cantidadDePaginas:int
-anioDePublicacion:int
-stockLibro:int
+Libros(idLibro:String,tituloLibro:String,autor:String,genero1Libro:String,genero2Libro:String
cantidadDePaginas:int,anioDePublicacion:int,stockLibro:int)
+getidLibro():String
+gettituloLobro():String
+getautor():String
+getgenero1Libro():String
+getgenero2Libro():String
+get-cantidadDePaginas():int
+getanioDePublicacion():int
+getStock():int
+set´s():void
}

class Pelicula{
-idPelicula:String
-nombreDeLaPelicula:String
-director:String
-genero1Pelicula:String
-genero2Pelicula:String
-cantidadDeHoras:int
-cantidadDeMinutos:int
-anioDeEstreno:int
-stockPelicula:int

+Pelicula(idPelicula:String,nombreDeLaPelicula:String,director:String,genero1Pelicula:String,genero2Pelicula:String
cantidadDeHoras:int,cantidadDeMinutos:int,anioDeEstreno:int,stockPelicula:int)
+getidPelicula():String
+getnombreDeLaPelicula():String
+getdirector():String
+getgenero1Pelicula():String
+getgenero2Pelicula():String
+getcantidadDeHoras():int
+getcantidadDeMinutos():int
+getanioDeEstreno():int
+getstockPelicula():int
+set´():void
}

note "La menbresia puede ser (normal \n premiun o vip)" as N1
note "la pelicula puede durar menos de 1hora" as N2


Usuario"1"-->"0..*"Libros:Arrienda
Usuario"1"-->"0..*"Pelicula:Arrienda

Usuario ->N1
Pelicula->N2
@enduml